fix: wrap settings flex containers

--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
@@ -287,13 +287,23 @@ select[name="campaignId"] {
             display: flex;
             align-content: flex-start;
             flex-direction: row;
+            flex-wrap: wrap;
             background-color: var(--givewp-shades-white);
             padding: var(--givewp-spacing-9) var(--givewp-spacing-6);
             border-radius: var(--givewp-spacing-2);
 
+            @media (max-width: 1100px) {
+                flex-direction: column;
+            }
+
             .leftColumn {
                 flex: 1;
                 padding-right: var(--givewp-spacing-6);
+
+                @media (max-width: 1100px) {
+                    width: 100%;
+                    margin-bottom: var(--givewp-spacing-4);
+                }
             }
 
             .rightColumn {
